<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="25dp"
            android:paddingBottom="25dp" >

            <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/profilePicture"
            android:src="@drawable/avatar_icon"
            android:layout_marginRight="15dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:layout_alignTop="@+id/profilePicture"
                android:layout_toRightOf="@+id/profilePicture"
                android:layout_toEndOf="@+id/profilePicture"
                android:hint="@string/name" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText2"
                android:layout_below="@+id/editText"
                android:layout_toRightOf="@+id/profilePicture"
                android:layout_toEndOf="@+id/profilePicture"
                android:hint="@string/city" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/oldPassword"
                android:layout_below="@+id/email"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:hint="@string/old_password" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newPassword1"
                android:layout_below="@+id/oldPassword"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/new_password"
                android:layout_marginTop="20dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/newPassword2"
                android:layout_below="@+id/newPassword1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/new_password"
                android:layout_marginTop="20dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText6"
                android:layout_below="@+id/editText2"
                android:layout_toRightOf="@+id/profilePicture"
                android:layout_toEndOf="@+id/profilePicture"
                android:hint="@string/team" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText7"
                android:layout_below="@+id/editText6"
                android:layout_toRightOf="@+id/profilePicture"
                android:layout_toEndOf="@+id/profilePicture"
                android:hint="@string/other" />


            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/email"
                android:layout_below="@+id/editText7"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:hint="@string/email" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="13"
                android:text="@string/save"
                android:id="@+id/save"
                android:layout_below="@+id/newPassword2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="13"
                android:text="@string/cancel"
                android:id="@+id/cancel"
                android:layout_below="@+id/save"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp" />
            </RelativeLayout>
    </ScrollView>
</RelativeLayout>
